--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="Navigationbar">
     
         <ul>
-            <li class="currentpage home"> <a href="./home.html"> Home</a> </li> 
+            <li class="currentpage home"> <a href="./index.html"> Home</a> </li> 
             <li><a href="./detailP1.html"> </a> <a href="./detailP1.html"> City Center</a> </li>
             <li><a href="./detailp2.html"></a> <a href="./detailp2.html">Castle</a> </li>
             <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arco</a> </li>
