--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     
 </head>
-<section class="select">
 <body class = "home">
-    <img class = "logo" src="./imgs/logo white.png" alt="logo" width="80" height="60">
+    <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+    <nav class="Navigationbar">
     
         <ul1>
             <li class="currentpage home"> <a href="./index.html"> Home</a> </li> 
@@ -23,5 +23,4 @@
         </ul1>
     </nav>
 </body>
-</section>
 </html>
