--- a/detailP1.html
+++ b/detailP1.html
@@ -13,9 +13,9 @@
             
             <ul class="others">
                 <li class="home"> <a href="./index.html"> Home</a> </li> 
-                <li><a href="./detailp1.html"> </a> <a href="./detailp1.html"> Gallery</a> </li>
+                <li><a href="./detailP1.html"> </a> <a href="./detailP1.html"> Gallery</a> </li>
                 <li><a href="./detailP2.html"></a> <a href="./detailP2.html">City center</a> </li>
-                <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
+                <li><a href="./detailP3.html"></a> <a href="./detailP3.html">Arch</a> </li>
                 <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
                 <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
             </ul>
