--- a/detailp2.html
+++ b/detailp2.html
@@ -11,14 +11,14 @@
 
 <body class="detailP">
 
-        <ul class="others">
-            <li class="home"> <a href="./index.html"> Home</a> </li> 
-            <li><a href="./detailp1.html"> </a> <a href="./detailp1.html">Gallery</a> </li>
-            <li><a href="./detailP2.html"></a> <a href="./detailP2.html">City center</a> </li>
-            <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
-            <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-            <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
-        </ul>
+       <ul class="others">
+          <li class="home"> <a href="./index.html"> Home</a> </li> 
+          <li><a href="./detailP1.html"> </a> <a href="./detailP1.html"> Gallery</a> </li>
+          <li><a href="./detailP2.html"></a> <a href="./detailP2.html">City center</a> </li>
+          <li><a href="./detailP3.html"></a> <a href="./detailP3.html">Arch</a> </li>
+          <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
+          <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
+      </ul>
 
         <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
     
