--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      
         <ul class="navhome">
             <li class="home"> <a href="./index.html"> Home</a> </li> 
-            <li><a href="./detailp1.html"> </a> <a href="./detailp1.html">Gallery</a> </li>
+            <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
             <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
             <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
             <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
