--- a/detailP1.html
+++ b/detailP1.html
@@ -10,15 +10,16 @@
 </head>
 <body class="detailP">
 
+        <nav>
             <ul class="others">
-                <li class="home"> <a href="./index.html"> Home</a> </li> 
-            <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
-            <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
-            <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
-            <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-            <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
+               <li class="home"> <a href="./index.html"> Home</a> </li> 
+               <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
+               <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
+               <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
+               <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
+               <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
             </ul>
-
+        </nav>
             <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
 
         <section class="page">
@@ -34,7 +35,7 @@
                        <a><img class = "IMGS" src="./imgs/IMG_9215.jpg" alt="São Jorge Castle "></a> 
                        <a><img class = "IMGS" src="./imgs/IMG_9217-2.jpg" alt="São Jorge Castle "></a> 
                        <a><img class = "IMGS" src="./imgs/IMG_9219.jpg" alt="São Jorge Castle viewpoint 1 "></a>  
-                       <a><img class = "IMGS" src="./imgS/IMG-R9.jpg" alt="São Jorge Castle viewpoint 1 "></a>   
+                       <a><img class = "IMGS" src="./imgs/IMG-R9.jpg" alt="São Jorge Castle viewpoint 1 "></a>   
                     </section>  
                     
                     <section class="pic">
