--- a/detailp2.html
+++ b/detailp2.html
@@ -11,6 +11,7 @@
 
 <body class="detailP">
 
+  <nav>
         <ul class="others">
           <li class="home"> <a href="./index.html"> Home</a> </li> 
           <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
@@ -19,6 +20,7 @@
           <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
           <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
         </ul>
+      </nav>
 
         <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
     
@@ -28,10 +30,10 @@
 
          <section class="it">
            <section class="pic">
-            <p class="dis">
+            <article class="dis">
               Marques de Pombal, Avenida de Liberdade are right in the centre and are easily accessible. You can catch any metro line and get there via the final blue or yellow line.
                From the airport you can catch the red line metro or the airport bus. Via the red line you must change the metro in station sao Sebastiao and get the blue line to get off at Restaurateurs.
-            </p>
+            </article>
             <h2 class="headings">
               <a href= "https://www.travel-in-portugal.com/lisbon/restauradores" target="_blank">  Praça dos Restauradores </a> 
             </h2>
@@ -62,7 +64,7 @@
                 Rossio is also one of the main attraction in the city center where we also have a train station which makes it easy to assess and reachable.  
                 In front of the train station we have Praça Dom Pedro IV and  Fonte Norte do Rossio which are very photogenic and scenic in a good sunny day. 
               </p>
-
+         <aside>
               <ol>
                 <li> Popularity – medium high.</li>
                 <li> Time to get from airport – 30 to 40 min.</li>
@@ -70,6 +72,7 @@
                 <li> Distance – 6 to 9 km.</li>
                 <li> Photogenic – Medium. </li>
              </ol>
+            </aside>
 
              <h2 class="headings">
                 <a href= "https://en.wikipedia.org/wiki/Rossio" target="_blank"> Rossio </a>
@@ -93,7 +96,13 @@
               intresting shape and size because of its position going up hill.   
            </p>
 
-               <a><img class = "IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a> 
+
+           <h2 class="headings">
+             <a href= "https://en.wikipedia.org/wiki/Rossio" target="_blank">  Rossio </a>
+           </h2>
+            <a><img class = "IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a> 
+
+
                <h2 class="headings">
                 <a href= "https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">  Castelo </a>
               </h2>
