--- a/detailp3.html
+++ b/detailp3.html
@@ -10,14 +10,16 @@
 </head>
 <body class="detailP">
     
-  <ul class="others">
-    <li class="home"> <a href="./index.html"> Home</a> </li> 
-    <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
-    <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
-    <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
-    <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-    <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
+  <nav>
+    <ul class="others">
+       <li class="home"> <a href="./index.html"> Home</a> </li> 
+       <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
+       <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
+       <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
+       <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
+       <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
     </ul>
+</nav>
 
             <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60"> 
 
@@ -30,7 +32,7 @@
   
        <a><img class = "IMGS4" src="./imgs/IMG_0021.jpg" alt="Praça dos Restauradores"></a> 
   
-          <section class="p4">
+          <article class="p4">
             <p> 
                 This is one of the most beautiful squares in all Europe, opening southwards onto the huge Tagus estuary.
                  Until the era of mass aviation, this was Lisbon´s great reception hall for visitors arriving by sea even better 
@@ -40,7 +42,7 @@
                   The Royal Palace had been sited on the western side of the square since the 16th 
                   century when king Manuel transferred the court down from the Castle of São Jorge (St. George)..      
            </p>
-          </section>
+          </article>
 
           <h2 class="headings">
             <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank">  River Tejo </a> 
@@ -63,7 +65,7 @@
           <h2 class="headings">
             <a href= "" target="_blank"> pratical Information </a> 
           </h2>
-          <a><img class="IMGS4" src="./imgS/ARCODETAILS.jpg" alt="The arch"></a>
+          <a><img class="IMGS4" src="./imgS/arcodetails.jpg" alt="The arch"></a>
 
      </section>
      
