--- a/detailP4.html
+++ b/detailP4.html
@@ -11,15 +11,16 @@
 
 <body class="detailP">
         
-    <ul class="others">
-
-        <li class="home"> <a href="./index.html"> Home</a> </li> 
-            <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
-            <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
-            <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
-            <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-            <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
-     </ul>
+    <nav>
+        <ul class="others">
+           <li class="home"> <a href="./index.html"> Home</a> </li> 
+           <li><a href="./detailP1.html"> </a> <a href="./detailP1.html">Gallery</a> </li>
+           <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
+           <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
+           <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
+           <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
+        </ul>
+    </nav>
 
         <img class = "logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
    
@@ -65,7 +66,7 @@
                <h2 class="headings">
                 <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank"> pratical Information </a> 
             </h2>
-               <a><img class="IMGS4" src="./imgS/rivertejodiscription.png" alt="The arch"></a>
+               <a><img class="IMGS4" src="./imgS/rivertejodiscription.jpg" alt="river side"></a>
          
      </section>
 
