--- a/detailp3.html
+++ b/detailp3.html
@@ -65,7 +65,7 @@
           <h2 class="headings">
             <a href= "" target="_blank"> pratical Information </a> 
           </h2>
-          <a><img class="IMGS4" src="./imgS/arcodetails.jpg" alt="The arch"></a>
+          <a><img class="IMGS4" src="./imgs/arcodetails.jpg" alt="The arch"></a>
 
      </section>
      
