--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
         </ul>
     </nav>
-    
-
         <img class = "logo1" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+
+        <section class="cookies">
+            This website uses cookies <a href="#">Learn More</a>
+        </section>
 </body>
 </html>
