--- a/detailP4.html
+++ b/detailP4.html
@@ -29,7 +29,7 @@
     <section  class="image4"> 
         <section class="place4">
             <h2 class="headings">
-                <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank">  25 de abril bridge </a> 
+                <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank">  River Tejo and  25 de abril bridge </a> 
               </h2>
             </section>
       
@@ -67,6 +67,10 @@
                 <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank"> pratical Information </a> 
             </h2>
                <a><img class="IMGS4" src="./imgs/rivertejodiscription.jpg" alt="river side"></a>
+
+               <section class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d389.18574615939025!2d-9.136240223713926!3d38.70665027394964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19347a43adcb77%3A0x99fd4fbe812cd646!2sCais%20das%20Colunas!5e0!3m2!1sen!2snl!4v1698261203498!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               </section>
          
      </section>
 
