--- a/detailp2.html
+++ b/detailp2.html
@@ -31,6 +31,9 @@
          <section class="it">
            <section class="pic">
             <article class="dis">
+              <h2 class="headings">
+                <a href= "https://www.travel-in-portugal.com/lisbon/restauradores" target="_blank">  City Center</a> 
+              </h2>
               Marques de Pombal, Avenida de Liberdade are right in the centre and are easily accessible. You can catch any metro line and get there via the final blue or yellow line.
                From the airport you can catch the red line metro or the airport bus. Via the red line you must change the metro in station sao Sebastiao and get the blue line to get off at Restaurateurs.
             </article>
@@ -98,9 +101,9 @@
 
 
            <h2 class="headings">
-             <a href= "https://en.wikipedia.org/wiki/Rossio" target="_blank">  Rossio </a>
+            <a href= "https://en.wikipedia.org/wiki/Rossio" target="_blank">  Rossio </a>
            </h2>
-            <a><img class = "IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a> 
+               <a><img class = "IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a> 
 
 
                <h2 class="headings">
