--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
         <section class="cookies">
             This website uses cookies <a href="#">Learn More</a>
         </section>
+
+        <section class="picname">
+            Avenida De Liberdade
+        </section>
 </body>
 </html>
