--- a/detailp3.html
+++ b/detailp3.html
@@ -39,7 +39,7 @@
                  Kings and Heads of State would disembark when visiting Portugal. 
                  Prior to the 1755 earthquake, it was called the Terreiro do Paço (Royal Yard).
                   The Royal Palace had been sited on the western side of the square since the 16th 
-                  century when king Manuel transferred the court down from the Castle of São Jorge (St. George)..      
+                  century when king Manuel transferred the court down from the Castle of São Jorge (St. George). <a href= "https://en.wikipedia.org/wiki/Rua_Augusta_Arch" target="_blank"> read more.... </a>     
            </p>
           </article>
 
@@ -51,7 +51,7 @@
   
           <section class="p4">
             <p> 
-            This is the view from the Arch area towards the river. the sunset is awesome here and quite cozy and romatic      
+            This is the view from the Arch area towards the river. The sunset is awesome here and quite cozy and romatic      
            </p>
           </section>
 
