--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
 
         <section class="picname">
-            Avenida De Liberdade
+            <a href= "./detailp2.html"> Avenida De Liberdade </a> 
         </section>
 </body>
 </html>
