--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img class = "logo1" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
 
         <section class="cookies">
-            This website uses cookies <a href="#">Learn More</a>
+            This website uses cookies <a href="https://www.aboutcookies.org/" target="_blank">Learn More</a>
         </section>
 
         <section class="picname">
