FINAL FINAL FINAl

--- a/detailP4.html
+++ b/detailP4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
     <title>River</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/style.css" />  
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />  
 </head>
 
 <body class="detailP">
