--- a/detailP4.html
+++ b/detailP4.html
@@ -18,7 +18,7 @@
            <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
            <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
            <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-           <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
+           <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
         </ul>
     </nav>
 
