--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="./detailp2.html"></a> <a href="./detailp2.html">City Center</a> </li>
             <li><a href="./detailp3.html"></a> <a href="./detailp3.html">Arch</a> </li>
             <li><a href="./detailP4.html"> </a> <a href="./detailP4.html">River </a> </li>
-            <li><a href="./contact.html"> </a> <a href="./contact.html">contact </a> </li>
+            <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
         </ul>
     </nav>
         <img class = "logo1" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
@@ -25,7 +25,7 @@
         </section>
 
         <section class="picname">
-            <a href= "./detailp2.html"> Avenida De Liberdade </a> 
+            <a href= "./detailp2.html"> Rossio </a> 
         </section>
 </body>
 </html>
