--- a/detailP4.html
+++ b/detailP4.html
@@ -37,7 +37,10 @@
       
               <section class="p4">
                 <p> 
-                This is the view from the Arch area towards trhe river. the sunset is awesome here and quite cozy and romatic      
+                  This is the view of the river from the river bank. The picture was taken during sunset in a cloudy day. I have used long exposure photo      
+                </p>
+
+                   
                </p>
               </section>
 
@@ -47,16 +50,14 @@
 
               <a><img class = "IMGS4" src="./imgs/IMG-R5.jpg" alt="Praça dos Restauradores"></a> 
               <p> 
-                This is the view of the river from the river bank. The picture was taken during sunset in a cloudy day. I have used long exposure photo      
-               </p>
-
+                This is the view from the Arch area towards the river. The sunset is awesome here and quite cozy and romatic.
                <h2 class="headings">
                 <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank">  River Tejo </a> 
               </h2>
               <a><img class = "IMGS4" src="./imgs/IMG-R3.jpg" alt="Praça dos Restauradores"></a> 
  
               <p> 
-                This is the view from the Arch area towards trhe river. the sunset is awesome here and quite cozy and romatic      
+                This is the ferry service in the Tejo river, which goes to the other side of the river. A lot of private boats can also be seen.     
                </p>
                <h2 class="headings">
                 <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank">  River Tejo </a> 
