--- a/detailp3.html
+++ b/detailp3.html
@@ -33,7 +33,7 @@
        <a><img class = "IMGS4" src="./imgs/IMG_0021.jpg" alt="Praça dos Restauradores"></a> 
           <article class="p4">
             <p> 
-                This is one of the most beautiful squares in all Europe, opening southwards onto the huge Tagus estuary.
+                This is one of the most beautiful squares in all Europe, opening southwards onto the huge Tagus (Tejo river) estuary.
                  Until the era of mass aviation, this was Lisbon´s great reception hall for visitors arriving by sea even better 
                  able to enjoy its beauty from their vantage points on slowly docking vessels. It was at the dock here that the 
                  Kings and Heads of State would disembark when visiting Portugal. 
