--- a/detailP1.html
+++ b/detailP1.html
@@ -54,7 +54,7 @@
                         <img class = "IMGS" src="./imgs/IMG_1117.jpg" alt="Avenida"></a> 
 
                         <a href="https://en.wikipedia.org/wiki/Restauradores_Square" target="_blank">
-                        <img class = "IMGS" src="./imgs/IMG-9303-1.jpg" alt="restauradores"></a>
+                        <img class = "IMGS" src="./imgs/IMG_9303.jpg" alt="restauradores"></a>
 
                         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
                         <img class = "IMGS" src="./imgs/IMG-R3.jpg" alt="São Jorge Castle viewpoint 1 "></a>  
