--- a/detailp2.html
+++ b/detailp2.html
@@ -40,7 +40,7 @@
             <h2 class="headings">
               <a href= "https://www.travel-in-portugal.com/lisbon/restauradores" target="_blank">  Praça dos Restauradores </a> 
             </h2>
-              <a><img class = "IMGS" src="./imgs/IMG-9303-1.jpg" alt="Praça dos Restauradores"></a> 
+              <a><img class = "IMGS" src="./imgs/IMG_9303.jpg" alt="Praça dos Restauradores"></a> 
               <p> 
                 Lisbon is quite big but not all places are interesting. 
                 I have picked that are close to the city centre or accessible from the centre such as
