--- a/detailP4.html
+++ b/detailP4.html
@@ -65,7 +65,7 @@
                <a><img class="IMGS4" src="./imgs/IMG-R9.jpg" alt="The arch"></a>
                
                <h2 class="headings">
-                <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank"> pratical Information </a> 
+                <a href= "https://en.wikipedia.org/wiki/Tagus" target="_blank"> Pratical Information and direction</a> 
             </h2>
                <a><img class="IMGS4" src="./imgs/rivertejodiscription.jpg" alt="river side"></a>
 
