--- a/detailp2.html
+++ b/detailp2.html
@@ -98,7 +98,7 @@
         <a><img class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="restauradores"></a>
       </section>
 
-      <section class="pic">
+      <p class="pic">
         <h2 class="headings">
           <a href="https://maps.app.goo.gl/vctC49WeABZRwCQu8" target="_blank"> Glória - Restauradores </a>
         </h2>
@@ -110,6 +110,8 @@
           has this
           intresting shape and size because of its position going up hill.
         </p>
+
+
 
 
         <h2 class="headings">
