--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
   <title>Contact</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <meta name="author" content="Anup Subedi">
 </head>
 
 <body class="detailP">
@@ -32,7 +33,7 @@
       <section class="Left">
 
 
-        <h2> Contact Us </h2>
+        <h1> <em> Contact Us </em> </h1>
         <form action="https://coolinhollanddemo.azurewebsites.net/" target="_blank" method="post">
           <section class="title">
             <input type="radio" id="Mr." name="Title" value="Mr." required>
