--- a/detailP1.html
+++ b/detailP1.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
   <title>Gallery</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <meta name="author" content="Anup Subedi">
 </head>
 
 <body class="detailP">
@@ -23,13 +24,18 @@
       <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
     </ul>
   </nav>
-  <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
 
+  <header>
+     <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+  </header>
+  
   <section class="page">
     <section class="heading">
-      <h1>
+      
+      <h3>
         <a href="https://www.instagram.com/talkingphotos.tp/" target="_blank"> Photo <span>Gallery</span></a>
-      </h1>
+      </h3>
+  
     </section>
 
     <section class="it">
