--- a/detailP4.html
+++ b/detailP4.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
   <title>River</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <meta name="author" content="Anup Subedi">
 </head>
 
 <body class="detailP">
