--- a/detailp2.html
+++ b/detailp2.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
   <title>City Center</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
+  <meta name="author" content="Anup Subedi">
 </head>
 
 <body class="detailP">
@@ -98,7 +99,7 @@
         <a><img class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="restauradores"></a>
       </section>
 
-      <p class="pic">
+      <section class="pic">
         <h2 class="headings">
           <a href="https://maps.app.goo.gl/vctC49WeABZRwCQu8" target="_blank"> Glória - Restauradores </a>
         </h2>
@@ -111,9 +112,6 @@
           intresting shape and size because of its position going up hill.
         </p>
 
-
-
-
         <h2 class="headings">
           <a href="https://en.wikipedia.org/wiki/Rossio" target="_blank"> Rossio </a>
         </h2>
@@ -124,17 +122,20 @@
           <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
             Castelo </a>
         </h2>
+
         <a><img class="IMGS" src="./imgs/IMG_9218.jpg" alt="View from castelo"></a>
 
         <h2 class="headings">
           <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
             Castelo </a>
         </h2>
+
         <a><img class="IMGS" src="./imgs/IMG_9225.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
 
       </section>
     </section>
+
     <section class="btn">
       <a href="https://christobeltravel.com/where-to-go-lisbon-city-center/" target="_blank"> More</a>
     </section>
