--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
-
+    <meta name="author" content="Anup Subedi">
 </head>
 
 <body class="home">
