--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       <section class="Left">
 
 
-        <h1> <em> Contact Us </em> </h1>
+        <h1>  Contact Us  </h1>
         <form action="https://coolinhollanddemo.azurewebsites.net/" target="_blank" method="post">
           <section class="title">
             <input type="radio" id="Mr." name="Title" value="Mr." required>
