--- a/detailp2.html
+++ b/detailp2.html
@@ -38,7 +38,7 @@
           <h2 class="headings">
             <a href="https://www.travel-in-portugal.com/lisbon/restauradores" target="_blank"> City Center</a>
           </h2>
-          Marques de Pombal, Avenida de Liberdade are right in the centre and are easily accessible. You can catch any
+          Marques de Pombal, Avenida de Liberdade are right in the <em>centre</em> and are easily accessible. You can catch any
           metro line and get there via the final blue or yellow line.
           From the airport you can catch the red line metro or the airport bus. Via the red line you must change the
           metro in station sao Sebastiao and get the blue line to get off at Restaurateurs.
