--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
 
-  <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+  <img title="Logo" class="logo" src="./imgs/logowhite.png" alt="logo"> 
 
   <section class="contactp">
     <section class="contact">
@@ -36,6 +36,8 @@
         <h1>  Contact Us  </h1>
         <form action="https://coolinhollanddemo.azurewebsites.net/" target="_blank" method="post">
           <section class="title">
+            <legend>Details:</legend>
+
             <input type="radio" id="Mr." name="Title" value="Mr." required>
             <label for="Mr."> Mr.</label>
             <input type="radio" id="Mrs." name="Title" value="Mrs." required>
