--- a/detailP1.html
+++ b/detailP1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +27,7 @@
   </nav>
 
   <header>
-     <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+     <img title="Logo" class="logo" src="./imgs/logowhite.png" alt="logo"> 
   </header>
   
   <section class="page">
@@ -42,53 +43,53 @@
       <section class="pic">
 
         <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_9215.jpg" alt="São Jorge Castle "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_9215.jpg" alt="São Jorge Castle "></a>
 
         <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="São Jorge Castle "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="São Jorge Castle "></a>
 
         <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_9219.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_9219.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG-R9.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG-R9.jpg" alt="São Jorge Castle viewpoint 1 "></a>
       </section>
 
       <section class="pic">
 
         <a href="https://www.lisbonportugaltourism.com/guide/aqueduct.html" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_0984.jpg" alt="Lisbon"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_0984.jpg" alt="Lisbon"></a>
 
         <a href="https://en.wikipedia.org/wiki/Restauradores_Square" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_1117.jpg" alt="Avenida"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_1117.jpg" alt="Avenida"></a>
 
         <a href="https://en.wikipedia.org/wiki/Restauradores_Square" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_9303.jpg" alt="restauradores"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_9303.jpg" alt="restauradores"></a>
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG-R3.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG-R3.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
       </section>
 
       <section class="pic">
         <a href="https://en.wikipedia.org/wiki/Rua_Augusta_Arch" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_0024-PS-2.jpg" alt="Sea side"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_0024-PS-2.jpg" alt="Sea side"></a>
 
         <a href="https://en.wikipedia.org/wiki/Restauradores_Square" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_0042-Edit-2.jpg" alt="Rossio"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_0042-Edit-2.jpg" alt="Rossio"></a>
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG_0402.jpg" alt="Yellow tram"></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG_0402.jpg" alt="Yellow tram"></a>
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG-R5.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG-R5.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG-R8.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG-R8.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
 
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank">
-          <img class="IMGS" src="./imgs/IMG-R1.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+          <img title="Lisbon" class="IMGS" src="./imgs/IMG-R1.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
       </section>
     </section>
