--- a/detailp2.html
+++ b/detailp2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +27,7 @@
     </ul>
   </nav>
 
-  <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+  <img title="Logo" class="logo" src="./imgs/logowhite.png" alt="logo"> 
 
 
   <section class="page">
@@ -47,9 +48,9 @@
           <a href="https://www.travel-in-portugal.com/lisbon/restauradores" target="_blank"> Praça dos Restauradores
           </a>
         </h2>
-        <a><img class="IMGS" src="./imgs/IMG_9303.jpg" alt="Praça dos Restauradores"></a>
+        <a><img title="Lisbon" class="IMGS" src="./imgs/IMG_9303.jpg" alt="Praça dos Restauradores"></a>
         <p>
-          Lisbon is quite big but not all places are interesting.
+          Lisbon is quite <strong>big</strong> but not all places are interesting.
           I have picked that are close to the city centre or accessible from the centre such as
           Marques de Pombal, Avenida de Liberdade, Praca da figueire, castelo de sao Jorge, Praca do comercio and river
           Tejo and so on.
@@ -61,7 +62,7 @@
         </h2>
 
 
-        <a> <img class="IMGS" src="./imgs/Airporttoavenida.jpg" alt="Rossio Lisbon"></a>
+        <a> <img title="Lisbon" class="IMGS" src="./imgs/Airporttoavenida.jpg" alt="Rossio Lisbon"></a>
 
 
       </section>
@@ -70,7 +71,7 @@
         <h2 class="headings">
           <a href="https://en.wikipedia.org/wiki/Avenida_da_Liberdade" target="_blank"> Avenida da Liberdade </a>
         </h2>
-        <a> <img class="IMGS" src="./imgs/IMG-1143-2.jpg" alt="Avenida da Liberdade"></a>
+        <a> <img title="Lisbon" class="IMGS" src="./imgs/IMG-1143-2.jpg" alt="Avenida da Liberdade"></a>
         <p>
           Rossio is also one of the main attraction in the city center where we also have a train station which makes it
           easy to assess and reachable.
@@ -90,20 +91,20 @@
         <h2 class="headings">
           <a href="https://en.wikipedia.org/wiki/Rossio" target="_blank"> Rossio </a>
         </h2>
-        <a> <img class="IMGS" src="./imgs/IMG_0010-2.jpg" alt="Directions"></a>
+        <a> <img title="Lisbon" class="IMGS" src="./imgs/IMG_0010-2.jpg" alt="Directions"></a>
 
         <h2 class="headings">
           <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
             Castelo </a>
         </h2>
-        <a><img class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="restauradores"></a>
+        <a><img title="Lisbon" class="IMGS" src="./imgs/IMG_9217-2.jpg" alt="restauradores"></a>
       </section>
 
       <section class="pic">
         <h2 class="headings">
           <a href="https://maps.app.goo.gl/vctC49WeABZRwCQu8" target="_blank"> Glória - Restauradores </a>
         </h2>
-        <a> <img class="IMGS" src="./imgs/IMG-7161-3.jpg" alt="Glória - Restauradores"></a>
+        <a> <img title="Lisbon" class="IMGS" src="./imgs/IMG-7161-3.jpg" alt="Glória - Restauradores"></a>
         <p>
           Ascensor da Glória also know as the tram that only goes up and down in Praca dos Restauradores is also a very
           scenic
@@ -115,7 +116,7 @@
         <h2 class="headings">
           <a href="https://en.wikipedia.org/wiki/Rossio" target="_blank"> Rossio </a>
         </h2>
-        <a><img class="IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a>
+        <a><img title="Lisbon" class="IMGS" src="./imgs/IMG_6324.jpg" alt="Rossio"></a>
 
 
         <h2 class="headings">
@@ -123,14 +124,14 @@
             Castelo </a>
         </h2>
 
-        <a><img class="IMGS" src="./imgs/IMG_9218.jpg" alt="View from castelo"></a>
+        <a><img title="Lisbon" class="IMGS" src="./imgs/IMG_9218.jpg" alt="View from castelo"></a>
 
         <h2 class="headings">
           <a href="https://tropter.com/en/portugal/lisbon/sao-jorge-castle/sao-jorge-castle-viewpoint" target="_blank">
             Castelo </a>
         </h2>
 
-        <a><img class="IMGS" src="./imgs/IMG_9225.jpg" alt="São Jorge Castle viewpoint 1 "></a>
+        <a><img title="Lisbon" class="IMGS" src="./imgs/IMG_9225.jpg" alt="São Jorge Castle viewpoint 1 "></a>
 
 
       </section>
