--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="./contact.html"> </a> <a href="./contact.html">Contact </a> </li>
         </ul>
     </nav>
-    <img class="logo1" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+    <img title="Logo" class="logo1" src="./imgs/logowhite.png" alt="logo"> 
 
     <section class="cookies">
         This website uses cookies <a href="https://www.aboutcookies.org/" target="_blank">Learn More</a>
