--- a/detailP4.html
+++ b/detailP4.html
@@ -2,13 +2,16 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
+
   <title>River</title>
+
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
   <meta name="author" content="Anup Subedi">
 </head>
@@ -26,7 +29,7 @@
     </ul>
   </nav>
 
-  <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+  <img title="Logo" class="logo" src="./imgs/logowhite.png" alt="logo"> 
 
 
 
@@ -36,8 +39,8 @@
         <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> River Tejo and 25 de abril bridge </a>
       </h2>
     </section>
-
-    <a><img class="IMGS4" src="./imgs/25deabrilbridge-2.jpg" alt="Praça dos Restauradores"></a>
+   
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/25deabrilbridge-2.jpg" alt="Praça dos Restauradores"></a>
 
     <section class="p4">
       <p>
@@ -51,13 +54,13 @@
       <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> River Tejo </a>
     </h2>
 
-    <a><img class="IMGS4" src="./imgs/IMG-R5.jpg" alt="Praça dos Restauradores"></a>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/IMG-R5.jpg" alt="Praça dos Restauradores"></a>
     <p>
       This is the view from the Arch area towards the river. The sunset is awesome here and quite cozy and romatic.
     <h2 class="headings">
       <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> River Tejo </a>
     </h2>
-    <a><img class="IMGS4" src="./imgs/IMG-R3.jpg" alt="Praça dos Restauradores"></a>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/IMG-R3.jpg" alt="Praça dos Restauradores"></a>
 
     <p>
       This is the ferry service in the Tejo river, which goes to the other side of the river. A lot of private boats can
@@ -66,12 +69,12 @@
     <h2 class="headings">
       <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> River Tejo </a>
     </h2>
-    <a><img class="IMGS4" src="./imgs/IMG-R9.jpg" alt="The arch"></a>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/IMG-R9.jpg" alt="The arch"></a>
 
     <h2 class="headings">
       <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> Pratical Information and direction</a>
     </h2>
-    <a><img class="IMGS4" src="./imgs/rivertejodiscription.jpg" alt="river side"></a>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/rivertejodiscription.jpg" alt="river side"></a>
 
     <section class="map">
       <iframe
