--- a/detailp3.html
+++ b/detailp3.html
@@ -2,13 +2,16 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
+
   <title>Arch</title>
+
   <link rel="stylesheet" type="text/css" href="./css/style.css" />
   <meta name="author" content="Anup Subedi">
 </head>
@@ -26,7 +29,7 @@
     </ul>
   </nav>
 
-  <img class="logo" src="./imgs/logowhite.png" alt="logo" width="80" height="60">
+  <img title="Logo" class="logo" src="./imgs/logowhite.png" alt="logo"> 
 
   <section class="image4">
     <section class="place4">
@@ -34,10 +37,14 @@
         <a href="https://en.wikipedia.org/wiki/Rua_Augusta_Arch" target="_blank"> Rua Augusta Arch </a>
       </h2>
     </section>
+    <figure>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/IMG_0021.jpg" alt="Praça dos Restauradores"></a>
+    <figcaption>fig.- Praça do Comércio. </figcaption>
+    </figure>
 
-    <a><img class="IMGS4" src="./imgs/IMG_0021.jpg" alt="Praça dos Restauradores"></a>
+    
     <article class="p4">
-      <p>
+      <p title="About Lisbon">
         This is one of the most beautiful squares in all Europe, opening southwards onto the huge Tagus (Tejo river)
         estuary.
         Until the era of mass aviation, this was Lisbon´s great reception hall for visitors arriving by sea even better
@@ -54,7 +61,10 @@
       <a href="https://en.wikipedia.org/wiki/Tagus" target="_blank"> River Tejo </a>
     </h2>
 
-    <a><img class="IMGS4" src="./imgs/25deabrilbridge-2.jpg" alt="Praça dos Restauradores"></a>
+    <figure>
+    <a><img title="River Tejo" class="IMGS4" src="./imgs/25deabrilbridge-2.jpg" alt="Praça dos Restauradores"></a>
+      <figcaption>Fig.- River Tejo</figcaption>
+    </figure>
 
     <section class="p4">
       <p>
@@ -62,20 +72,21 @@
       </p>
     </section>
 
-
-
-
-
     <h2 class="headings">
       <a href="https://en.wikipedia.org/wiki/Rua_Augusta_Arch" target="_blank"> Rua Augusta Arch </a>
     </h2>
-    <a><img class="IMGS4" src="./imgs/arcdaruaaugusta.jpg" alt="The arch"></a>
+    
+     <figure>
+    <a><img title="Lisbon" class="IMGS4" src="./imgs/arcdaruaaugusta.jpg" alt="The arch"></a>
+    <figcaption>Fig.- Augusta Arch with Tram</figcaption>
+     </figure>
 
     <h2 class="headings">
       <a href="" target="_blank"> pratical Information and Direction</a>
     </h2>
-
-    <a><img class="IMGS4" src="./imgs/arcodetails.jpg" alt="The arch"></a>
+        <figure>
+          <a><img title="Lisbon" class="IMGS4" src="./imgs/arcodetails.jpg" alt="The arch"></a>
+        </figure>
 
     <section class="map">
       <iframe
