--- a/detailp3.html
+++ b/detailp3.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
@@ -87,16 +88,17 @@
         <figure>
           <a><img title="Lisbon" class="IMGS4" src="./imgs/arcodetails.jpg" alt="The arch"></a>
         </figure>
+      </section>
 
     <section class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.4078300288393!2d-9.13939922407226!3d38.70844467176501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193479870cf7e5%3A0xc4e62457fc6249b0!2sArco%20da%20Rua%20Augusta!5e0!3m2!1sen!2snl!4v1698260673875!5m2!1sen!2snl"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+         referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </section>
 
 
-  </section>
+  
 
 
   <footer>
