--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
+      <!-- This is for fonts like the facebook, instagram, email icons/fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./imgs/favicon.ico" type="image/x-icon">
@@ -35,6 +38,7 @@
 
         <h1>  Contact Us  </h1>
         <form action="https://coolinhollanddemo.azurewebsites.net/" target="_blank" method="post">
+          <fieldset>
           <legend>Details:</legend>
           
           <section class="title">
@@ -74,7 +78,7 @@
           <textarea id="message" name="your message" rows="4" placeholder="write your message here...."
             required></textarea>
 
-
+          </fieldset>
 
 
           <span class="Suscribelbl"> Suscribe to our newsletter:</span>
