--- a/detailP4.html
+++ b/detailP4.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      <!-- This is for fonts like the facebook, instagram, email icons/fonts -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -78,6 +78,7 @@
     <a><img title="Lisbon" class="IMGS4" src="./imgs/rivertejodiscription.jpg" alt="river side"></a>
   </section>
   
+      <!-- This is for Google maps plugin for page 4 and 5 -->
     <section class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d389.18574615939025!2d-9.136240223713926!3d38.70665027394964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19347a43adcb77%3A0x99fd4fbe812cd646!2sCais%20das%20Colunas!5e0!3m2!1sen!2snl!4v1698261203498!5m2!1sen!2snl"
