--- a/detailp3.html
+++ b/detailp3.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      <!-- This is for fonts like the facebook, instagram, email icons/fonts -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -90,6 +90,7 @@
         </figure>
       </section>
 
+    <!-- This is for Google maps plugin for page 4 and 5 -->
     <section class="map">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.4078300288393!2d-9.13939922407226!3d38.70844467176501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193479870cf7e5%3A0xc4e62457fc6249b0!2sArco%20da%20Rua%20Augusta!5e0!3m2!1sen!2snl!4v1698260673875!5m2!1sen!2snl"
